--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>webpack 4 quickstart</title>
+    <title>react quick start</title>
 </head>
 
 <body>
